--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+---
+title: Felicity Westmacott, Bespoke Dressmaker
+---
+
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>{{ page.title }}</title>
+  </head>
+  <body>
 Hello World
+  </body>
+</html>
+
+
+
