Testing out includes.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,9 @@
 title: Felicity Westmacott, Bespoke Dressmaker
 ---
 
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
+{% include header.html title={{ page.title }} %}
+
 Hello World
-  </body>
-</html>
 
-
+{% include footer.html %}
 
