--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
-title: Felicity Westmacott, Bespoke Dressmaker
+msg: Here is a message.
 ---
 
-{% include header.html title={{ page.title }} %}
+{% include header.html title="Felicity Westmacott, Bespoke Dressmaker" %}
 
-Hello World
+Hello {{ page.msg }}
 
 {% include footer.html %}
 
