Adding some actual content.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 msg: Here is a message.
 ---
 
-{% include header.html title="Felicity Westmacott, Bespoke Dressmaker" %}
+{% include header.html
+    title="Felicity Westmacott, Bespoke Dressmaker"
+    location="home" %}
 
 Hello {{ page.msg }}
 
