Joining tag onto single line.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 msg: Here is a message.
 ---
 
-{% include header.html
-    title="Felicity Westmacott, Bespoke Dressmaker"
-    location="home" %}
+{% include header.html title="Felicity Westmacott, Bespoke Dressmaker" location="home" %}
 
 Hello {{ page.msg }}
 
