Adding content to index page and footer.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,93 @@ msg: Here is a message.
 
 {% include header.html title="Felicity Westmacott, Bespoke Dressmaker" location="home" %}
 
+<div class="header" style="text-align: center;">
+    <img alt="Felicity Westmacott - Bespoke Dressmaker 01737 773 282"
+         style="max-width: 100%;"
+         src="http://felicitywestmacott.co.uk/graphics/headerIndex.png" />
+</div>
+
+<div style="white-space: nowrap; overflow: hidden;">
+    <img style="max-width: 20%;"
+         src="http://felicitywestmacott.co.uk/graphics/pic1b.jpg" /><img style="max-width: 20%;"
+         src="http://felicitywestmacott.co.uk/graphics/pic2b.jpg" /><img style="max-width: 20%;"
+         src="http://felicitywestmacott.co.uk/graphics/pic3b.jpg" /><img style="max-width: 20%;"
+         src="http://felicitywestmacott.co.uk/graphics/pic4b.jpg" /><img style="max-width: 20%;"
+         src="http://felicitywestmacott.co.uk/graphics/pic5b.jpg" />
+</div>
+
+<div>
+    <div class="sectiontext">
+
+        <p class="jump">
+            <span class="jump">Felicity Westmacott</span> is a bespoke wedding dress maker with more than 10 years experience.
+            If you can't find your <span class="jump">perfect dress</span> on the rails commissioning a
+            <span class="jump">unique wedding gown</span> is the perfect solution.
+        </p>
+
+        <p>
+            Felicity makes bespoke, one-off dresses from design to completion from her studio in Redhill, Surrey. Drawing on her expertise and experience, Felicity will help bring together your own design ideas, elements of style you may have seen elsewhere and new suggestions to create a unique gown to suit you and the theme of your day. Order fabrics from the 1000's of samples stocked; silks, lace, embroideries, chiffons and many more or you are welcome to provide the materials yourself . Felicity drafts a pattern for each bride so you know that the dress will be a perfect fit and flattering to your figure.
+        </p>
+
+        <p>
+            Exquisite hand embroidery and beading provides the finishing touch to many of the dresses she has made. Felicity can also make boleros, stoles, veils, tiaras and jewellery to compliment your dress.
+        </p>
+
+        <p>
+            Felicity can also help you with the restoring and tailoring of vintage gowns. Size or style alterations on shop bought dresses are sometimes accepted.
+        </p>
+
+        <p>
+            Felicity can help create your dream dress, whether elegantly understated or fantastically over-the top. Her training in the history of costume means she is well placed to help with the creation of historical wedding gowns as well as more traditional or modern designs.
+        </p>
+
+        <p>
+            <a href="contact.html">Contact Felicity</a> by email or phone with any questions or to make a free appointment to discuss your requirements.
+        </p>
+
+    </div>
+</div>
+
+
+<div class="section">
+
+    <img class="right" src="http://felicitywestmacott.co.uk/graphics/profile.jpg" alt="" />
+
+    <div class="sectiontext">
+        <h3>About Me</h3>
+        <p>I have been sewing professionally for more than 15 years,
+            specialising in bridalwear since 2003. I graduated from Wimbledon
+            College of Art with a BA(Hons) in Costume design.
+        </p>
+        <p>My family say that I'm never seen without a needle. For
+            my work I make beautiful and individual dresses for weddings,
+            parties and special occasions, and on holiday I do cross stitch!
+        </p>
+    </div>
+    <div class="sectiontext">
+        <p>My first memory of sewing is at just over four years old, on
+            the floor of my mother's sewing room, making a doll's dress (which I
+            still have). I sewed at home for fun, at Brownies for badges, at
+            school for GSCE and A-level, fashion shows and for my friends'
+            Leavers' Ball dresses. I joined the National Youth Theatre's costume
+            dept. and sewed through 6 summer holidays in dusty theatre
+            wardrobes and back stage. I sewed my way through art college while
+            running a small shop selling clothes and jewellery that I had made myself.
+        </p>
+        <p>
+            In my early twenties I designed and sewed hundreds of costumes for a
+            Yorkshire based Youth theatre 'Livewire'. At university I
+            purposefully took the design (not sewing) course and pushed my
+            research and design skills - I felt I could already sew! While at
+            university I got the bug for bridalwear by working part time for a
+            wedding dress shop as their alterations lady. After graduating I
+            worked briefly in film and television before concentrating on being
+            a bespoke wedding dress maker.
+        </p>
+    </div>
+</div>
+
+
 Hello {{ page.msg }}
 
 {% include footer.html %}
