Adding contact page.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 ---
-msg: Here is a message.
 ---
+
 
 {% include header.html title="Felicity Westmacott, Bespoke Dressmaker" location="home" %}
 
-<div class="header" style="text-align: center;">
-    <img alt="Felicity Westmacott - Bespoke Dressmaker 01737 773 282"
-         style="max-width: 100%;"
-         src="http://felicitywestmacott.co.uk/graphics/headerIndex.png" />
-</div>
 
 <div style="white-space: nowrap; overflow: hidden;">
     <img style="max-width: 20%;"
@@ -25,7 +20,7 @@ msg: Here is a message.
         <p class="jump">
             <span class="jump">Felicity Westmacott</span> is a bespoke wedding dress maker with more than 10 years experience.
             If you can't find your <span class="jump">perfect dress</span> on the rails commissioning a
-            <span class="jump">unique wedding gown</span> is the perfect solution.
+            <span class="jump">unique wedding gown</span> is the ideal solution.
         </p>
 
         <p>
@@ -90,8 +85,6 @@ msg: Here is a message.
     </div>
 </div>
 
-
-Hello {{ page.msg }}
 
 {% include footer.html %}
 
