--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 ---
 
 
-{% include header.html title="Contact / About Me" location="contact" %}
+{% include header.html title="Contact Me" location="contact" %}
 
 
 <div class="section">
