--- a/ordering.html
+++ b/ordering.html
@@ -4,36 +4,36 @@
 {% include header.html title="Ordering your Bespoke Dress" location="ordering" %}
 
 
-<h1>Commissioning your bespoke dress</h1>
+<h1>Frequently Asked Questions</h1>
 
 <div class="section">
     <img class="left" src="http://felicitywestmacott.co.uk/graphics/pic5.jpg" />
     <div class="sectiontext">
-        <h3>Enquiries for weddings in 2014 and 2015 are welcome.</h3>
+        <h3>Are you available to make my dress?</h3>
         <p>
-            A minimum budget of £1600 per wedding dress slot is required, most gowns cost between £1800 and £2600 with fabrics.
+            Enquiries for weddings in 2014 and 2015 are welcome, however
+            I am fully booked for wedding dates before August 2014.
         </p>
-        <p>
-            Please note I am fully booked for wedding dates before August 2014.
-        </p>
-        <p>
-            For more guidance on the making process, prices and time-scales see the FAQ below.
-        </p>
-
-
+        <!--<p>-->
+            <!--A minimum budget of £1600 per wedding dress slot is required, -->
+            <!--most gowns cost between £1800 and £2600 with fabrics.-->
+        <!--</p>-->
     </div>
 </div>
 
 <div class="section">
     <img class="right" src="http://felicitywestmacott.co.uk/graphics/pic1.jpg" />
     <div class="sectiontext">
-        <h3>The Design and Making Process</h3>
+        <h3>How does my dress get designed and made?</h3>
         <p>
             A free design consultation appointment begins the process where we
             will discuss what you require covering elements such as style,
             materials, the budget and time-scale. A design sketch and cost
             quotation will then be posted or emailed to you for your
-            consideration. An individual pattern will be drafted to your
+            consideration.
+        </p>
+        <p>
+            An individual pattern will be drafted to your
             measurements and series of private fittings will ensure a perfect
             fit and finish. The process of a bespoke bridal dress will usually
             include the making of a toile, which is a mock-up of the design in
@@ -41,12 +41,13 @@
             wearer to check the style.
         </p>
         <p>
-            All consultations and fittings take place in my own home so you will be
+            All consultations and fittings take place in my own home and so will be
             completely private and you will have my full attention during your
             appointment.
         </p>
-
-        <p> For a more in depth exploration of the design and making process <a href="dressindepth.html">click here</a>
+        <p>
+            For a more in depth exploration of the design and making
+            process <a href="dressindepth.html">click here</a>.
         </p>
     </div>
 </div>
@@ -54,7 +55,7 @@
 <div class="section">
     <img class="left" src="http://felicitywestmacott.co.uk/graphics/pic2.jpg" />
     <div class="sectiontext">
-        <h3>How long does it take? Rush orders?</h3>
+        <h3>How long does it take? Can you accommodate rush orders?</h3>
         <p>
             Four to six months notice is usually required though I do get booked up
             for the summer more quickly than the winter months.
@@ -76,40 +77,44 @@
 <div class="section">
     <img class="right" src="http://felicitywestmacott.co.uk/graphics/pic3.jpg" />
     <div class="sectiontext">
-        <h3>Typical costs and budgets</h3>
+        <h3>How much will it cost?</h3>
         <p>
-            Consultation appointments are free and we can discuss your ideal budget and
+            A minimum budget of £1600 per wedding dress slot is required,
+            most gowns cost between £1800 and £2600 with fabrics.
+        </p>
+        <p>
+            Consultation appointments are free and we can discuss your ideal budget and then
             design with that price in mind. The cost of each commission will
-            depend on the amount of work involved and the cost of the materials. Design elements that often increase the cost include layering, using lace, embellishments and fuller skirted styles.
+            depend on the amount of work involved and the cost of the materials.
+            Design elements that often increase the cost include layering, using lace,
+            embellishments and fuller skirted styles.
         </p>
         <p>
             Materials can be bought through me or purchased yourself and can be
             chosen to suit your budget.	Fabrics typically comprise about 1/3 of the total cost.
         </p>
         <p>
-            Please note that all the prices on this website are for guidance only,
+            Please note that <em>all the prices on this website are for guidance only</em>,
             every commission differs depending on the work involved.
-            And though some dresses in my portfolio are shown with prices below £1600 I no longer take wedding dress
+            And though some dresses in my portfolio are shown with prices below £1600 I no
+            longer take wedding dress
             commissions with total budgets below this threshold.
         </p>
         <p>
             Bridesmaids dresses from the high street will
             always be cheaper than having each dress made bespoke by me,
-            I cannot compete with those made in bulk in the far east!
+            I do not compete on price with dresses made in bulk in the Far East!
             But you can be sure of the perfect colour, style and fit for each bridesmaid when you
             choose my services.
         </p>
 
         <p>
             Price guide for typical bespoke orders, labour + fabrics
-        <ul>
+          <ul>
             <li>
                 Wedding dresses
                 <br /> &#160; &#160; &#160;
-                from £1600 to £6000,   typical £1800-£2600
-
-
-
+                from £1600 to £6000, typical £1800-£2600
             </li>
             <li>
                 Adult Bridesmaids/evening/prom
@@ -141,9 +146,10 @@
                 <br /> &#160; &#160; &#160;
                 from £300, typical £375
             </li>
-        </ul>
+          </ul>
         </p>
-        <p> For guidance on typical 'terms and conditions' <a href="terms.html">click here</a>
+        <p>
+            For guidance on typical 'terms and conditions' <a href="terms.html">click here</a>
         </p>
     </div>
 </div>
@@ -196,7 +202,6 @@
             the exact dress they wanted . If you really love a dress exactly as
             it is by another designer it's best to buy it from the original
             source.
-        <p />
         </p>
     </div>
 </div>
