Correct paths to thank you images.

--- a/thankyous.html
+++ b/thankyous.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/ailsa.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/ailsa.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress and veil for Ailsa</h3>
         <p>
@@ -44,7 +44,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/cowell.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/cowell.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Alison Cowell</h3>
         <p>
@@ -74,7 +74,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/williams.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/williams.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress and bolero for Laura Williams</h3>
         <p>
@@ -95,7 +95,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/katie.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/katie.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Katie Darvall</h3>
         <p>
@@ -117,7 +117,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/singleton.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/singleton.jpg" alt="" />
     <div class="sectiontext">
         <h3>Jacket for Mother-of-the-Bride Karen Singelton</h3>
         <p>
@@ -136,7 +136,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/connolly.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/connolly.jpg" alt="" />
     <div class="sectiontext">
         <h3>Bridesmaids dresses for Charlotte Connolly</h3>
         <p>
@@ -164,7 +164,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/king.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/king.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Ellie King
         </h3>
@@ -200,7 +200,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/mei.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/mei.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Michele Mei
         </h3>
@@ -217,7 +217,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/sophie.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/sophie.jpg" alt="" />
     <div class="sectiontext">
         <h3>Tiara and alterations for Sophie</h3>
         <p>
@@ -233,7 +233,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/barker.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/barker.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Jenna Barker</h3>
         <p>
@@ -250,7 +250,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/phillips.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/phillips.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress and veil for Rachel Phillips</h3>
         <p>
@@ -265,7 +265,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/macdonald.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/macdonald.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding-kayliegh dress for Jacqeline Macdonald</h3>
         <p>
@@ -285,7 +285,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/sanders.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/sanders.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress and flower hair pin for Jackie Sanders</h3>
         <p>
@@ -308,7 +308,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/simpson.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/simpson.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Amy Simpson</h3>
         <p>
@@ -330,7 +330,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/billige.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/billige.jpg" alt="" />
     <div class="sectiontext">
         <h3>Bridesmaids' dresses for Amanda Billige</h3>
         <p>
@@ -367,7 +367,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/cook.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/cook.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress, bridesmaids' dresses, cravats &amp; hankies and
             an evening dress for Marie Cook
@@ -388,7 +388,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/thompson.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/thompson.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Kelly Thompson</h3>
         <p>
@@ -399,7 +399,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="portfolio/images/thursfieldtt.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/thursfieldtt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Bridesmaids, tiara and dressing service for Fiona
             Thursfield
@@ -442,7 +442,7 @@
 
 <!--
 	<div class="section">
-		<img class="right" src="thankyous/bann.jpg" alt="" />
+		<img class="right" src="http://felicitywestmacott.co.uk/thankyous/bann.jpg" alt="" />
 		<div class="sectiontext">
 			<h3>Wedding dress for Bann Salman</h3>
 			<p>
@@ -458,7 +458,7 @@
 	</div>
  -->
 <div class="section">
-    <img class="right" src="thankyous/harding.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/harding.jpg" alt="" />
     <div class="sectiontext">
         <h3>Alterations and Vintage veil restoration for Charlene
             Harding
@@ -479,7 +479,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="portfolio/images/crawfordtt.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/crawfordtt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Tracey Crawford</h3>
         <p>
@@ -510,7 +510,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="portfolio/images/loneytt.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/portfolio/images/loneytt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Hannah Loney</h3>
         <p>
@@ -539,7 +539,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/timlin.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/timlin.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress alterations for Anna Timlin</h3>
         <p>
@@ -556,7 +556,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/lester.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/lester.jpg" alt="" />
     <div class="sectiontext">
         <h3>Dress and Coat for Mother of the Bride, Irene Lester</h3>
         <p>
@@ -573,7 +573,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/miller.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/miller.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress and bolero alterations for Debbie Miller</h3>
         <p>
@@ -589,7 +589,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/arisa.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/arisa.jpg" alt="" />
     <div class="sectiontext">
         <h3>Alterations and hand beading for Arisa Ota</h3>
         <p>
@@ -606,7 +606,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="portfolio/images/endersbytt.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/endersbytt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Lou Endersby</h3>
         <p>
@@ -623,7 +623,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/easton.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/easton.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress, bridesmaids &amp; flowergirl dresses and
             groomsmens ties for Alice Easton
@@ -640,7 +640,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="portfolio/images/doanitt.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/doanitt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Thalia Donai</h3>
         <p>
@@ -657,7 +657,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/sherwood.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/sherwood.jpg" alt="" />
     <div class="sectiontext">
         <h3>Flowegirl dresses, tiara and necklace for Jo Sherwood</h3>
         <p>
@@ -673,7 +673,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/strong.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/strong.jpg" alt="" />
     <div class="sectiontext">
         <h3>Tudor Wedding dress for Stella Strong</h3>
         <p>
@@ -687,7 +687,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="portfolio/images/howardtt.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/portfolio/images/howardtt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Kate Tibbles</h3>
         <p>
@@ -709,7 +709,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="portfolio/images/cherrytt.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/cherrytt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Prom dress for Cherry Smith</h3>
         <p>
@@ -728,7 +728,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="portfolio/images/juliett.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/portfolio/images/juliett.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Julie Barrell</h3>
         <p>
@@ -748,7 +748,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/neil.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/neil.jpg" alt="" />
     <div class="sectiontext">
         <h3>Prom dress for Sarah Neil</h3>
         <p>
@@ -769,7 +769,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/howes.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/howes.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Claire Howes</h3>
         <p>
@@ -783,7 +783,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="portfolio/images/sdarvaltt.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/sdarvaltt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Suzanne Darvall</h3>
         <p>
@@ -799,7 +799,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/steph.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/steph.jpg" alt="" />
     <div class="sectiontext">
         <h3>Necklace, tiara and alterations for Steph Foster</h3>
         <p>
@@ -814,7 +814,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="thankyous/zoe.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/zoe.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Zoe Whittacker</h3>
         <p>
@@ -831,7 +831,7 @@
 </div>
 
 <div class="section">
-    <img class="right" src="thankyous/yarbrudy.jpg" alt="" />
+    <img class="right" src="http://felicitywestmacott.co.uk/thankyous/yarbrudy.jpg" alt="" />
     <div class="sectiontext">
         <h3>Lace-up back in shop-bought bodice for Gina Yarbrudy</h3>
         <p>
@@ -846,7 +846,7 @@
 </div>
 
 <div class="section">
-    <img class="left" src="portfolio/images/turnertt.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/turnertt.jpg" alt="" />
     <div class="sectiontext">
         <h3>Dress and jacket for Jan Turner</h3>
         <p>
