Tidying up thank yous. (missing pictures)

--- a/thankyous.html
+++ b/thankyous.html
@@ -7,7 +7,7 @@
 <h1>Thank You Messages</h1>
 
 <div class="section">
-    <img class="left" src="thankyous/mostert.jpg" alt="" />
+    <img class="left" src="http://felicitywestmacott.co.uk/thankyous/mostert.jpg" alt="" />
     <div class="sectiontext">
         <h3>Wedding dress for Karen Mostert</h3>
         <p>
@@ -686,6 +686,7 @@
     </div>
 </div>
 
+<!-- TODO: Add this back when the picture is available... or remove permanently.
 <div class="section">
     <img class="right" src="http://felicitywestmacott.co.uk/portfolio/images/howardtt.jpg" alt="" />
     <div class="sectiontext">
@@ -707,6 +708,7 @@
         </p>
     </div>
 </div>
+-->
 
 <div class="section">
     <img class="left" src="http://felicitywestmacott.co.uk/portfolio/images/cherrytt.jpg" alt="" />
@@ -727,6 +729,7 @@
     </div>
 </div>
 
+<!-- TODO: Add this back when the picture is available... or remove permanently.
 <div class="section">
     <img class="right" src="http://felicitywestmacott.co.uk/portfolio/images/juliett.jpg" alt="" />
     <div class="sectiontext">
@@ -746,6 +749,7 @@
         </p>
     </div>
 </div>
+-->
 
 <div class="section">
     <img class="left" src="http://felicitywestmacott.co.uk/thankyous/neil.jpg" alt="" />
