Using layouts, added empty portfolio page.

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 ---
+layout: default
+title: Contact Me
+location: contact
 ---
-
-
-{% include header.html title="Contact Me" location="contact" %}
 
 
 <div class="section">
@@ -42,5 +42,3 @@
 
 </div>
 
-
-{% include footer.html %}
