--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
+layout: default
+title: Felicity Westmacott, Bespoke Dressmaker
+location: home
 ---
-
-
-{% include header.html title="Felicity Westmacott, Bespoke Dressmaker" location="home" %}
 
 
 <div style="white-space: nowrap; overflow: hidden;">
@@ -84,7 +84,4 @@
         </p>
     </div>
 </div>
-
-
-{% include footer.html %}
 
