--- a/links.html
+++ b/links.html
@@ -1,7 +1,8 @@
 ---
+layout: default
+title: Links
+location: links
 ---
-
-{% include header.html title="Contact Me" location="contact" %}
 
 
 <h1>
@@ -153,5 +154,3 @@
 <br />
 <br />
 
-
-{% include footer.html %}
