--- a/ordering.html
+++ b/ordering.html
@@ -1,7 +1,8 @@
 ---
+layout: default
+title: Ordering your Bespoke Dress
+location: ordering
 ---
-
-{% include header.html title="Ordering your Bespoke Dress" location="ordering" %}
 
 
 <h1>Frequently Asked Questions</h1>
@@ -230,5 +231,3 @@
     </div>
 </div>
 
-
-{% include footer.html %}
