--- a/thankyous.html
+++ b/thankyous.html
@@ -1,7 +1,8 @@
 ---
+layout: default
+title: Thank You Messages
+location: thanks
 ---
-
-{% include header.html title="Contact Me" location="contact" %}
 
 
 <h1>Thank You Messages</h1>
@@ -873,5 +874,3 @@
     </div>
 </div>
 
-
-{% include footer.html %}
